docs: added notes - k8s

--- a/Kubernetes/YAML/Complete-app/Drupal-postgres/psql-deployment.yaml
+++ b/Kubernetes/YAML/Complete-app/Drupal-postgres/psql-deployment.yaml
@@ -33,5 +33,5 @@ spec:
       volumes:
       - name: postgres-persistent-storage
         persistentVolumeClaim:
-          claimName: postgres-persistent-storage-claim
+          claimName: postgres-pvc
           
