--- a/Kubernetes/YAML/Volume/Nginx-app/nginx-volume.yaml
+++ b/Kubernetes/YAML/Volume/Nginx-app/nginx-volume.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: postgres-pv
+  name: nginx-pv
   labels:
     type: local
 spec:
   capacity:
-    storage: 1Gi
-  storageClassName : manual
+    storage: 500Mi
+  storageClassName: manual
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/data/drupal-app/postgres-pv"
+    path: "/mnt/data"
