--- a/Kubernetes/YAML/Volume/Nginx-app/nginx-volumeclaim.yaml
+++ b/Kubernetes/YAML/Volume/Nginx-app/nginx-volumeclaim.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mypvc
+  name: nginx-pvc
 spec:
   resources:
     requests:
-      storage: <Size>
+      storage: 500Mi
+  storageClassName: manual
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
