--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,10 @@ version: '3.9'
 
 services:
   devops-website:
-    container_name: website
+    container_name: devops-website
     build: 
       context: .
       dockerfile: Dockerfile
+    image: devops-website
     ports:
       - 8000:80
