chore: improve issue forms (#24)

--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -17,3 +17,8 @@ body:
       description: Screenshots if applicable
     validations:
       required: false
+  - type: textarea
+    id: extra_information
+    attributes:
+      label: Additional information
+      description: Is there anything else we should know about this feature request?
